# Itmo

./: .gitignore
algorithms/task_1005(v2)/: main.cpp
algorithms/task_1155/: CMakeLists.txt  main.cpp
algorithms/task_1207/: main.cpp
algorithms/task_1401/: CMakeLists.txt  main.cpp
algorithms/task_1650/: main.cpp
algorithms/task_1726/: main.cpp
algorithms/task_2025/: CMakeLists.txt  main.cpp
algorithms/untitled/: main.cpp
course3/applied mathematics/: app.js  document.txt  package-lock.json  package.json
course3/distributed_computing_labs/pa2/: CMakeLists.txt  banking.c  ipc.c  main.c  main.h
course3/distributed_computing_labs/pa3/: CMakeLists.txt  main.c  main.h
course3/distributed_computing_labs/pa5/: CMakeLists.txt  banking.c  critical_section.c  lamport_time.h  main.c  main.h  print_history.c  priority_queue.c
course3/distributed_computing_labs/pa6/: CMakeLists.txt  critical_section.c  lamport_time.c  lamport_time.h  main.c  main.h
course5/analysis_and_development_of_algorithms/dictionary/: CMakeLists.txt
course5/analysis_and_development_of_algorithms/dictionary/main/: helper_library.h
course5/analysis_and_development_of_algorithms/dictionary/main/dictionary/: dictionary.h  dictionary_impl.h
course5/analysis_and_development_of_algorithms/dictionary/test/: dictionary_tests.cpp
course5/analysis_and_development_of_algorithms/dictionary/test/lib/googletest-release-1.10.0/googletest/src/: gtest.cc
course5/analysis_and_development_of_algorithms/dynamic_array_and_linked_list/: CMakeLists.txt
course5/analysis_and_development_of_algorithms/dynamic_array_and_linked_list/main/: array.h  array_impl.h  helper_library.h  main.cpp
course5/analysis_and_development_of_algorithms/dynamic_array_and_linked_list/main/dynamic_array/: array.h  array_impl.h
course5/analysis_and_development_of_algorithms/dynamic_array_and_linked_list/main/linked_list/: list.h  list_impl.h
course5/analysis_and_development_of_algorithms/dynamic_array_and_linked_list/main/unrolled_list/: list.h  list_impl.h
course5/analysis_and_development_of_algorithms/dynamic_array_and_linked_list/test/: array_tests.cpp  array_tests.h  list2_tests.cpp  list_tests.cpp
course5/analysis_and_development_of_algorithms/dynamic_array_and_linked_list/test/lib/googletest-release-1.10.0/googletest/include/gtest/: gtest-param-test.h
course5/analysis_and_development_of_algorithms/lab1/: CMakeLists.txt  helper_library.h  helper_library_impl.h  main.cpp  sort.cpp  sort.h  sort_impl.h
course5/analysis_and_development_of_algorithms/lab1/main/: helper_library.h  helper_library_impl.h  sort_impl.h
course5/analysis_and_development_of_algorithms/lab1/test/: test.cpp
course5/analysis_and_development_of_algorithms/memory_management/: CMakeLists.txt
course5/analysis_and_development_of_algorithms/memory_management/main/: helper_library.h
course5/analysis_and_development_of_algorithms/memory_management/main/memory_allocator/: memory_allocator.h  memory_allocator_impl.h
course5/analysis_and_development_of_algorithms/memory_management/test/: memory_allocator_tests.cpp
course5/analysis_and_development_of_algorithms/memory_management/test/lib/googletest-release-1.10.0/googletest/docs/: advanced.md
course5/computer_graphics/: .gitignore
lab6/: .classpath
lab6/lab6/: lab6.java
lab62/: 1.csv  people.csv  Новый текстовый документ (2).txt
pip/courseWork/: build.gradle  settings.gradle
pip/lab1/: in.html  in2.html  index.html  main.css  main.php  mn.css  proba.html  some.js  val.js  validate.js
pip/lab2/: build.gradle
pip/lab3/: build.gradle
pip/popitka/: settings.gradle
pip/popitka2/: build.gradle  package-lock.json  package.json  webpack.config.js
pip/proba/: build.gradle  settings.gradle
pip/scripts/: create.sql  delete.sql  (+1 more)
popitka/: pom.xml
spo/: task3.frt  task7_1.frt  task7_2.frt
v_mat/: test.txt  test__5.txt
yasp/: lib.inc  parse_int  parse_int.asm  parse_uint  parse_uint.asm  print_char  print_int  print_int.asm  print_string  print_uint  read_char  read_char.asm  read_word  read_word.asm  read_word_length  read_word_length.asm  read_word_too_long  read_word_too_long.asm  string_copy  string_copy.asm  string_equals  string_equals not equals  string_equals not equals.asm  string_equals.asm  string_length  задание.txt
(+1021 files in other folders)
